# music-player

./: Cargo.toml  README.md  flake.nix
.fluentci/src/: jobs.ts  mod.ts
.github/workflows/: chromatic.yml  ci.yml  release-for-arm.yml  release-for-mac.yml  release.yml  rust-clippy.yml
docs/: airplay2-library-requirements.md
graphql/src/: lib.rs
graphql/src/tests/: devices.rs  mod.rs
server/src/: server.rs
types/src/: tests.rs
webui/: Cargo.toml
webui/musicplayer/: bun.lockb
webui/musicplayer/src-tauri/: Cargo.toml
