[package]
authors = ["Tsiry Sandratraina <tsiry.sndr@aol.com>"]
description = "The web ui of music player"
edition = "2021"
keywords = ["tokio", "music", "cli", "daemon", "streaming"]
license = "MIT"
name = "music-player-webui"
repository = "https://github.com/tsirysndr/music-player"
version = "0.1.15"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies.music-player-graphql]
path = "../graphql"
version = "0.1.8"

[dependencies.music-player-settings]
path = "../settings"
version = "0.1.4"

[dependencies.music-player-storage]
path = "../storage"
version = "0.1.5"

[dependencies.music-player-playback]
path = "../playback"
version = "0.1.9"

[dependencies.music-player-tracklist]
path = "../tracklist"
version = "0.1.7"

[dependencies.music-player-entity]
path = "../entity"
version = "0.1.7"

[dev-dependencies.music-player-scanner]
path = "../scanner"
version = "0.1.8"

[dependencies.music-player-discovery]
path = "../discovery"
version = "0.1.2"

[dependencies.music-player-types]
path = "../types"
version = "0.1.4"

[dependencies.music-player-addons]
path = "../addons"
version = "0.1.5"

[dev-dependencies]
futures-util = "0.3.25"
serde_json = "1.0.89"

sea-orm = {version = "0.9.3", features = ["runtime-tokio-rustls", "sqlx-sqlite"]}
surf = {version = "2.3.2", features = ["h1-client-rustls"], default-features = false}

[dependencies]
actix-cors = "0.6.3"
actix-files = "0.6.2"
actix-web = "4.9.0"
async-graphql = "4.0.15"
async-graphql-actix-web = "4.0.15"
dirs = "4.0.0"
futures = "0.3.28"
futures-util = "0.3.25"
mime = "0.3.16"
mime_guess = "2.0.4"
owo-colors = "3.5.0"
rust-embed = {version = "6.4.1", features = ["debug-embed", "actix"]}
sea-orm = {version = "0.9.3", features = ["runtime-tokio-rustls", "sqlx-sqlite"]}
serde = {version = "1.0.145", features = ["serde_derive"]}
serde_derive = "1.0.145"
tokio = {version = "1.21.2", features = ["full"]}
