[package]
authors = ["Jacob Stern <jacob.stern@outlook.com>"]
default-run = "app"
description = "A Tauri App"
edition = "2021"
license = ""
name = "app"
repository = ""
rust-version = "1.59"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = {version = "1.2.1", features = []}

[dependencies.music-player-addons]
path = "../../../addons"
version = "0.1.5"

[dependencies.music-player-graphql]
path = "../../../graphql"
version = "0.1.8"

[dependencies.music-player-settings]
path = "../../../settings"
version = "0.1.3"

[dependencies.music-player-storage]
path = "../../../storage"
version = "0.1.4"

[dependencies.music-player-playback]
path = "../../../playback"
version = "0.1.7"

[dependencies.music-player-tracklist]
path = "../../../tracklist"
version = "0.1.7"

[dependencies.music-player-types]
path = "../../../types"
version = "0.1.5"

[dependencies]
actix-web = "4.9.0"
async-graphql = "4.0.15"
async-graphql-actix-web = "4.0.15"
futures = "0.3.24"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tauri = {version = "1.2.1", features = ["path-all", "protocol-asset"]}
tokio = {version = "1.21.2", features = ["full"]}
uuid = "1.1.2"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
